--- a/src/component/Footer/Footer.css
+++ b/src/component/Footer/Footer.css
@@ -1,10 +1,9 @@
 footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    padding-top: 2%;
-    padding-left: 10%;
-    padding-right: 10%;
-    text-align: center;
+  padding: 5px;
+  width: 100%;
+  padding-top: 2%;
+  padding-left: 10%;
+  padding-right: 10%;
+  text-align: center;
+  margin-top: 150px;
 }
