--- a/src/component/ProfileDetails/ProfileDetails.css
+++ b/src/component/ProfileDetails/ProfileDetails.css
@@ -1,6 +1,5 @@
 .profile-card {
   border-radius: 10px;
-  overflow: hidden;
 }
 
 .profile-card-header {
@@ -10,7 +9,8 @@
 
 .avatar-container {
   position: relative;
-  top: -50px;
+  top: -100px;
+  left: -350px;
   display: flex;
   justify-content: center;
 }
@@ -20,14 +20,14 @@
 }
 
 .avatar-image {
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 200px;
   border: 3px solid white;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .profile-card .card-body {
-  margin-top: -30px;
+  margin-top: -100px;
 }
 
 .profile-card .card-footer {
