update Navbar ho lasciato cmq il componente di Carmine

--- a/src/component/Navbar/navbar.css
+++ b/src/component/Navbar/navbar.css
@@ -1,2 +1,7 @@
-input{ background-image: linear-gradient(to right,rgb(237, 243, 248), rgb(215, 244, 248));;;
+input {
+  background-image: linear-gradient(
+    to right,
+    rgb(237, 243, 248),
+    rgb(215, 244, 248)
+  );
 }
