--- a/src/component/ProfileDetails/ProfileDetails.css
+++ b/src/component/ProfileDetails/ProfileDetails.css
@@ -1,5 +1,6 @@
 .profile-card {
   border-radius: 10px;
+  position: relative;
 }
 
 .profile-card-header {
@@ -7,29 +8,12 @@
   object-fit: cover;
 }
 
-.avatar-container {
-  position: relative;
-  top: -100px;
-  left: -350px;
-  display: flex;
-  justify-content: center;
-}
-
-.avatar-wrapper {
-  position: relative;
-}
-
 .avatar-image {
-  width: 200px;
-  height: 200px;
+  width: 150px;
+  height: 150px;
   border: 3px solid white;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-}
-
-.profile-card .card-body {
-  margin-top: -100px;
-}
-
-.profile-card .card-footer {
-  font-size: 0.85rem;
+  position: absolute;
+  top: 150px;
+  left: 30px;
 }
