--- a/src/component/Navbar/navbar.css
+++ b/src/component/Navbar/navbar.css
@@ -1,7 +1,58 @@
-input {
-  background-image: linear-gradient(
-    to right,
-    rgb(237, 243, 248),
-    rgb(215, 244, 248)
-  );
+.nav-link {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  color: inherit;
+}
+
+.nav-link:hover {
+  color: #0a66c2;
+}
+
+.dropdown-toggle {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-decoration: none;
+  color: inherit;
+}
+
+.dropdown-toggle:hover {
+  color: #0a66c2;
+}
+
+.dropdown-toggle .small {
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.dropdown-toggle .bi-chevron-down {
+  font-size: 0.8rem;
+  margin-left: 4px;
+}
+
+.text-center.mx-3 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.text-center.mx-3 .small {
+  white-space: nowrap;
+}
+
+.navbar-nav .bi {
+  transition: transform 0.2s ease-in-out;
+}
+
+.navbar-nav .bi:hover {
+  transform: scale(1.1);
+}
+
+.dropdown-toggle::after {
+  display: none;
 }
